--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,14 +9,14 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivLoginCover"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toTopOf="@+id/guidelineimage"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/finger_i" />
+            app:srcCompat="@drawable/ic_man" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardLogin"
